--- a/app/src/main/res/layout/activity_applicants.xml
+++ b/app/src/main/res/layout/activity_applicants.xml
@@ -54,8 +54,7 @@
             android:layout_height="0dp"
             android:layout_weight="1"
             android:scrollbars="vertical"
-            android:paddingBottom="10dp"
-            android:background="@color/ripple_on_surface_47"/>
+            android:paddingBottom="10dp" />
 
         <Button
             android:id="@+id/btnSelectApplicants"
