--- a/app/src/main/res/layout/activity_emp_job_history.xml
+++ b/app/src/main/res/layout/activity_emp_job_history.xml
@@ -47,6 +47,5 @@
         android:layout_height="match_parent"
         android:padding="16dp"
         android:layout_marginStart="16dp"
-        android:layout_marginEnd="16dp"
-        android:background="@color/ripple_on_surface_47"/>
+        android:layout_marginEnd="16dp" />
 </LinearLayout>
