--- a/app/src/main/res/layout/activity_employer_jobs.xml
+++ b/app/src/main/res/layout/activity_employer_jobs.xml
@@ -68,9 +68,7 @@
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:clipToPadding="false"
-            android:padding="16dp"
-            android:scrollbars="vertical"
-            android:background="@color/ripple_on_surface_47"/>
+            android:scrollbars="vertical"/>
 
     </androidx.swiperefreshlayout.widget.SwipeRefreshLayout>
 
